# CodeForge

./: .gitignore  .impeccable.md  .ralphrc  Cargo.toml  Dockerfile  README.md  dev.sh
.github/workflows/: release.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONVENTIONS.md  STACK.md  STRUCTURE.md
.planning/phases/01-scaffolding/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  DISCOVERY.md
.planning/specs/: PRD.md
.ralph/: AGENT.md  PROMPT.md  fix_plan.md
crates/ai/: Cargo.toml
crates/ai/src/: agent.rs  cache.rs  context.rs  cost.rs  eval.rs  lib.rs  message.rs  prompt.rs  provider.rs  retry.rs  streaming.rs  token.rs  tool.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs  message.rs  state.rs  theme.rs
crates/app/src/handlers/: agent.rs  chat.rs  composer.rs  db.rs  mod.rs  popup.rs  session.rs  settings.rs  sidebar.rs  tabs.rs
crates/app/src/subscriptions/: agent.rs
crates/app/src/views/: chat.rs  composer.rs  context_menu.rs  mod.rs  popup.rs  settings.rs  sidebar.rs  tabs.rs
crates/core/: Cargo.toml
crates/core/src/: color.rs  config.rs  error.rs  event.rs  id.rs  keyboard.rs  layout.rs  lib.rs  model.rs  time.rs  version.rs  workspace.rs
crates/git/: Cargo.toml
crates/git/src/: blame.rs  branch.rs  commit.rs  config.rs  conflict.rs  diff.rs  error.rs  hook.rs  ignore.rs  lib.rs  log.rs  remote.rs  repository.rs  stash.rs  submodule.rs  tag.rs  worktree.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: db.rs  lib.rs  migrations.rs  models.rs  queries.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: api.rs  config.rs  hook.rs  lib.rs  loader.rs  manifest.rs  marketplace.rs  mcp.rs  registry.rs  sandbox.rs  skill.rs
crates/session/: Cargo.toml
crates/session/src/: claude.rs  codex.rs  lib.rs  manager.rs  protocol.rs  shell_env.rs  types.rs
crates/session/tests/: claude_integration.rs
crates/tauri-app/: Cargo.toml  permission-test.txt  tauri.conf.json
crates/tauri-app/agent-sidecar/: index.mjs  package-lock.json  package.json
crates/tauri-app/browser-sidecar/: browser.mjs
crates/tauri-app/capabilities/: default.json
crates/tauri-app/frontend/: index.html  package-lock.json  package.json
crates/tauri-app/frontend/e2e/: chat.spec.ts  composer.spec.ts  helpers.ts  overlays.spec.ts  sidebar.spec.ts  tabs.spec.ts
crates/tauri-app/frontend/src/: App.tsx  ipc.ts  main.tsx  themes.ts  types.ts
crates/tauri-app/frontend/src/components/browser/: BrowserPanel.tsx
crates/tauri-app/frontend/src/components/chat/: Breadcrumb.tsx  ChatArea.tsx  LifecycleBanner.tsx  Markdown.tsx  SessionHistory.tsx  ThinkingBlock.tsx  ThreadSetup.tsx  ThreadToolbar.tsx  ToolUseCard.tsx
crates/tauri-app/frontend/src/components/composer/: Composer.tsx  ModelSelector.tsx  ProviderPicker.tsx
crates/tauri-app/frontend/src/components/diff/: ConflictResolver.tsx  DiffEditor.tsx
crates/tauri-app/frontend/src/components/git/: GitPanel.tsx
crates/tauri-app/frontend/src/components/github/: IssueLinker.tsx  PrDashboard.tsx  PrReviewPanel.tsx
crates/tauri-app/frontend/src/components/onboarding/: SetupWizard.tsx
crates/tauri-app/frontend/src/components/settings/: SettingsOverlay.tsx  ThemeSelector.tsx  UsageDashboard.tsx
crates/tauri-app/frontend/src/components/shared/: AnimatedShow.tsx  CommandPalette.tsx  ContextMenu.tsx  KeyboardHelp.tsx  RemotePollBanner.tsx  SearchOverlay.tsx  SplitPane.tsx  SplitView.tsx  StatusBar.tsx  UpdateChecker.tsx  WelcomeScreen.tsx
crates/tauri-app/frontend/src/components/sidebar/: McpPanel.tsx  ProjectGroup.tsx  Sidebar.tsx  ThreadItem.tsx
crates/tauri-app/frontend/src/components/skills/: SkillsPanel.tsx
crates/tauri-app/frontend/src/components/tabs/: TabBar.tsx
crates/tauri-app/frontend/src/stores/: app-store.ts
crates/tauri-app/frontend/src/styles/: global.css
crates/tauri-app/src/: main.rs  state.rs  streaming.rs
crates/tauri-app/src/commands/: blame.rs  browser.rs  diff.rs  filesystem.rs  git.rs  github.rs  mcp.rs  mod.rs  naming.rs  onboarding.rs  projects.rs  providers.rs  search.rs  sessions.rs  settings.rs  skills.rs  themes.rs  threads.rs  usage.rs  worktree.rs
crates/tauri-app/src/commands/git/: local.rs  mod.rs  remote.rs
crates/tauri-app/themes/: dracula.json  github-dark.json  light.json  midnight.json  monokai.json  nord.json  obsidian-forge.json  solarized-dark.json
crates/telemetry/: Cargo.toml
crates/telemetry/src/: analytics.rs  crash.rs  health.rs  lib.rs  logger.rs  metrics.rs  performance.rs  trace.rs
