[package]
name = "codeforge-app"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { version = "0.14", features = ["tokio", "tiny-skia"] }
codeforge-session = { path = "../session" }
codeforge-persistence = { path = "../persistence" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
rfd = "0.15"
