[package]
name = "codeforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, traits, and configuration for CodeForge"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
