[package]
name = "codeforge-git"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Git abstraction layer for CodeForge"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
