[package]
name = "codeforge-persistence"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
