[package]
name = "codeforge-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin system types and MCP integration for CodeForge"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
