[package]
name = "codeforge-tauri"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
codeforge-session = { path = "../session" }
codeforge-persistence = { path = "../persistence" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
rusqlite = "0.31"
url = "2"
