[package]
name = "codeforge-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Observability, metrics, and health check types for CodeForge"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
